tests/snapshots/examples_fixtures/imports__import_collision_error.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/imports/import_collision_error.flx
== compile ==
failed (compile)
== diagnostics ==
error[E017]: Import Scope

Import statements must be at the top of the file.

  examples/imports/import_collision_error.flx:6:5
  |
6 |     import Modules.Math
  |     ^^^^^^^^^^^^^^^^^^^

Hint:
  Move all import statements before any other declarations.
== stdout ==
<not executed>
